# VK-bots-detection

./: blank_df.csv  create_features.py  get_user_info.py  preprocessing.py  pyproject.toml  settings.py  utils.py
PCA/: PCA.ipynb
TSNE/: TSNE.ipynb
app/: build_dataset.py  create_features.py  get_user_info.py  preprocessing.py  utils.py
corr_matrix/: Corr_matrix.ipynb
datasets/: group_people.csv
neural/: Neural.ipynb  requirements.txt
neural/CNN/: Neural.ipynb
neural/MLP/: Neural.ipynb
umap/: Umap.ipynb  pyproject.toml
