[tool.poetry]
name = "vk_users"
version = "0.1.0"
description = ""
authors = ["Anton <Kondrahin210@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.23.3"
isort = "^5.12.0"
black = "^23.1.0"
wemake-python-styleguide = "^0.17.0"
pandas = "^1.5.3"
numpy = "^1.24.2"
matplotlib = "^3.7.1"
notebook = "^6.5.3"
seaborn = "^0.12.2"
scikit-learn = "^1.2.2"
networkx = "^3.0"
community = "^1.0.0b1"
#umap-learn = {version = "^0.5.3", extras = ["plot"]}
#umap-learn = {version = "^0.5.3", extras = ["plot"]}
plotly = "^5.14.0"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

