[tool.poetry]
name = "umap"
version = "0.1.0"
description = ""
authors = ["Anton <Kondrahin210@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.6"
umap-learn = {version = "^0.5.3", extras = ["plot"]}
notebook = "^6.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
